2013-05-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/Makefile.am:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	* src/qt4/evaluator_control_panel.cpp:
	* src/qt4/evaluator_control_panel.h:
	* src/qt4/chain_selector.cpp:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/chain_selector.h:
	* src/qt4/action_sequence_selector.h:
	- 行動列探索のデバッガのコード整理途中．
	- ChainSelectorをActionSequenceSelectorへリネーム

	* src/qt4/evaluator_control_panel.h:
	- ChainSelectorをウインドウとして直接実体化するように変更

	* Makefile.am:
	- refresh.xpmを追加

	* xpm/refresh.xpm:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- OfflineClient実行ボタンのツールバーを削除し，メインツールバー上のボタンとして再配置
	- DebugMessageWindowのコード整理

2012-06-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/debug_message_window.cpp:
	- openDebugLogDir()とrunOfflineClientNormal()が循環呼び出ししてい
	たバグを修正
	- ウインドウを開いた時にオフラインクライアントを自動実行できていな
	かった不具合を修正

2012-05-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/debug_client_parser.cpp:
	* src/model/debug_view_data.cpp:
	* src/model/debug_view_data.h:
	* src/qt4/color_setting_dialog.cpp:
	* src/qt4/debug_painter.cpp:
	* src/qt4/draw_config.cpp:
	* src/qt4/draw_config.h:
	- デバッグサーバで指さし方向を扱えるようになった

	* src/model/options.cpp:
	* src/qt4/debug_message_window.cpp:
	- オフラインクライアント実行後にデバッグビューログも自動で読み込むように修正

2012-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	* src/Makefile.am:
	* src/qt4/main.cpp:
	- インストール対象にsswindow2を復帰
	- copyrightメッセージの年を更新

	* src/qt4/debug_log_dir_dialog.cpp:
	- デフォルトのログディレクトリをQDir::homePath()からQDir::tempPath()へ変更

2012-05-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/view_config_dialog.cpp:
	- プレイヤの軌跡表示範囲の終了時間を設定するためのシグナル発生元と
	スロット関数が誤っていたバグを修正

	* src/qt4/score_board_painter.cpp:
	- 左右入れ替え時のスコア表示の誤りを修正

2012-04-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/ball_painter.cpp: