@@ -89,7 +89,6 @@ MainData::clear()
     M_view_holder.clear();
     M_debug_log_holder.clear();
     M_grid_field_evaluation_holder.clear();
-    M_chain_description_set_holder.clear();
 }
 
 /*-------------------------------------------------------------------*/
