@@ -1,5 +1,15 @@
 2013-05-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/model/main_data.cpp:
+	* src/model/main_data.h:
+	* src/qt4/action_sequence_selector.cpp:
+	* src/qt4/action_sequence_selector.h:
+	* src/qt4/debug_message_window.cpp:
+	* src/qt4/evaluator_control_panel.cpp:
+	* src/qt4/evaluator_control_panel.h:
+	- ActionSequenceSelector周りのコード整理
+	- 不要になったChainDescriptionSetHolderの変数を削除
+
 	* src/qt4/Makefile.am:
 	* src/qt4/action_sequence_selector.cpp:
 	* src/qt4/action_sequence_selector.h:
